added final page

--- a/new-pages/directions.html
+++ b/new-pages/directions.html
@@ -237,9 +237,9 @@
           </a>
         </div>
       </div>
+      <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
     </div>
-
-</div>
+  </div>
 
 <script type="text/javascript">
 function initMap() {
