--- a/new-pages/pastResults.html
+++ b/new-pages/pastResults.html
@@ -1016,90 +1016,88 @@
         </div>
       </div>
     </div>
-
-
-
-    <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
-      <div class="row mx-6">
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
-          </a>
-        </div>
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
-          </a>
-        </div>
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
-          </a>
-        </div>
+  </div>
+  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
+    <div class="row mx-6">
+      <div class="col-md-4 text-center">
+        <a href="#" class="title-sponsor">
+          <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
+        </a>
       </div>
-      <div class="row mx-6">
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
-          </a>
-        </div>
+      <div class="col-md-4 text-center">
+        <a href="#" class="title-sponsor">
+          <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="#" class="title-sponsor">
+          <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+        </a>
       </div>
     </div>
+    <div class="row mx-6">
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+        </a>
+      </div>
+    </div>
+    <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
