--- a/new-pages/sponsors.html
+++ b/new-pages/sponsors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <!-- Required meta tags -->
@@ -97,120 +97,111 @@
         </div>
       </nav>
     </div>
-  </div>
-  <div class="content container px-4">
-    <div class="row">
-      <div class="col">
-        <h2 class="brand-blue">Lodging</h2>
-        <img src="../images/lodging.png" class="img-fluid my-2" alt="Lodging">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h2 class="brand-blue">Hotels & Motels in Eau Claire</h2>
-        <br />
-        <p>
-          Eau Claire has plenty of hotels and motels, with plenty of amenities, in plenty of locations.
-          Want to be on the North side of the city? How about right smack dab in the
-          <a href="https://www.visiteauclaire.com/plan/maps" target="_blank">middle of downtown</a>? We have a place just for you.
-        </p>
 
-        <p>
-          There are a variety of hotels in Eau Claire as well as, motels, inns and B&B’s to make your next trip to this region a unique and special experience.
-          Boutique hotels like The <a href="https://www.visiteauclaire.com/listings/the-oxbow-hotel/2259/" target="_blank">Oxbow</a> to the modern
-          <a href="https://www.visiteauclaire.com/listings/holiday-inn-eau-claire-south-%26-johnnys-italian-steakhouse/927/" target="_blank">Holiday Inn South</a>,
-          there is a variety of choices to lay your head and put your feet up during your next adventure to Eau Claire.
-          Many of the hotels also feature attached <a href="https://www.visiteauclaire.com/restaurants/" target="_blank">restaurants and bars</a>
-          which are without a doubt a convenience for any group such as traveling <a href="https://www.visiteauclaire.com/sports/" target="_blank">sporting teams</a>,
-          <a href="https://www.visiteauclaire.com/meeting/reunions/" target="_blank">family reunions</a>, and <a href="https://www.visiteauclaire.com/meeting/" target="_blank">large business groups</a>.
-        </p>
-        <p>
-          Visit our lodging page <a href="https://www.visiteauclaire.com/hotels/hotels-motels/" target="_blank">here</a> for a complete list of hotels available.
-        </p>
-      </div>
+    <div class="content container px-4">
+        <div class="row">
+          <div class="col-12 mt-3">
+            <h2 class="brand-blue text-center">Title Sponsors</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <a href="#" class="title-sponsors">
+              <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="#" class="title-sponsors">
+              <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="#" class="title-sponsors">
+              <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 mt-3">
+            <h3 class="brand-blue text-center">Sponsors</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+            </a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <p class="brand-blue text-center">If you wish to become a sponsor, please contact us through our contact page.</p>
+          </div>
+        </div>
     </div>
-  </div>
-  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
-    <div class="row mx-6">
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
-          <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
-        </a>
-      </div>
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
-          <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
-        </a>
-      </div>
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
-          <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
-        </a>
-      </div>
+
+    <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
+      <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+      </br>
+      </br>
+    </br>
     </div>
-    <div class="row mx-6">
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
-        </a>
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
-        </a>
-      </div>
-    </div>
-    <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
