added space at bottom of tickets page

--- a/tickets.html
+++ b/tickets.html
@@ -163,7 +163,7 @@
 					<li>The View <span style="color:red">*</span></li>
 				</ul>
 			</div>
-			<div class="col-12 mx-auto">
+			<div class="col-12 mx-auto mb-5">
 				<span style="color:red">*</span> <i>Raffle tickets available</i>
 			</div>
 		</div>
