--- a/tickets.html
+++ b/tickets.html
@@ -144,20 +144,15 @@
 		</div>
 
 		<div class="row">
-			<div class="col-6 mx-auto">
-				<a class="btn button-brand" href="./assets/2019_Rules_of_the_Tournament"><h3 class="mb-0">CLICK HERE TO SEE THE RULES</h3></a>
-			</div>
-		</div>
-
-		<div class="row">
 			<div class="col-12">
 				<h5 class="brand-blue mt-3">Tickets can also be purchased at:</h5>
 				<ul class="bulletless-grey">
 					<li>Online at jigsup.org <span style="color:red">*</span></li>
 					<li>Scheels (bait available) <span style="color:red">*</span></li>
 					<li>Select Mega Holiday Stations</li>
-					<li>Eau Claire Ford</li>
-					<li>Jacobson's Hardware (bait available)</li>
+          <li>Lake Wissota Travel Stop</li>
+					<li>Eau Claire Ford<span style="color:red">*</span></li>
+					<li>Jacobson's Hardware (bait available)<span style="color:red">*</span></li>
 					<li>UWEC Recreation <span style="color:red">*</span></li>
 					<li>The Edge <span style="color:red">*</span></li>
 					<li>The View <span style="color:red">*</span></li>
@@ -234,11 +229,6 @@
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
           <a href="#" class="sponsor">
-            <img src="./images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
-          </a>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
             <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
           </a>
         </div>
@@ -250,8 +240,8 @@
       </div>
       <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
     </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
