Added sandbar to sponsors

--- a/prizes.html
+++ b/prizes.html
@@ -743,6 +743,11 @@
           <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
         </a>
       </div>
+      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+        <a href="#" class="sponsor">
+          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+        </a>
+      </div>
     </div>
     <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
