--- a/sponsors.html
+++ b/sponsors.html
@@ -182,6 +182,11 @@
               <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
             </a>
           </div>
+          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+            <a href="#" class="sponsors">
+              <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">
