--- a/pastResults.html
+++ b/pastResults.html
@@ -1045,81 +1045,83 @@
   </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
     <div class="row mx-6">
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
+      <div class="col-lg-4 text-center">
+        <a href="www.scheels.com/" class="title-sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
+      <div class="col-lg-4 text-center">
+        <a href="www.eauclaireford.com/" class="title-sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-md-4 text-center">
-        <a href="#" class="title-sponsor">
+      <div class="col-lg-4 text-center">
+        <a href="www.subway.com/en-us" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
       </div>
     </div>
     <div class="row mx-6">
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
+      <div class="col-lg-3 col-sm-6 my-auto">
+        <a href="www.weau.com/" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
+      <div class="col-lg-3 col-sm-6 my-auto">
+        <a href="www.geteskimo.com/" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
+      <div class="col-lg-3 col-sm-6 my-auto">
+        <a href="www.megacoop.com/" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
+      <div class="col-lg-3 col-sm-6 my-auto">
+        <a href="www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+    </div>
+    <div class="row mx-6">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.uwec.edu/campus-life/housing-dining/dining/food-services/">
+          <img src="./images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.theedgepubandeatery.com/">
+          <img src="./images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.theviewonlakewissota.com/">
+          <img src="./images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="ttmtech.com/" class="sponsor">
           <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="xtrememotorsportsllc.com/">
+          <img src="./images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.leinie.com/">
+          <img src="./images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.aceautomall.com/">
+          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
         </a>
       </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <a href="#" class="sponsor">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="www.lakewissotasandbar.com/">
+          <img src="./images/sponsors/thesandbar.png" class="img-fluid sponsor" alt="The SandBar">
         </a>
       </div>
     </div>
