fixed tiers of sponsors on sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -106,17 +106,17 @@
         </div>
         <div class="row">
           <div class="col-md-4 text-center">
-            <a href="#" class="title-sponsors">
+            <a href="www.scheels.com" class="title-sponsors">
               <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
             </a>
           </div>
           <div class="col-md-4 text-center">
-            <a href="#" class="title-sponsors">
+            <a href="www.eauclaireford.com" class="title-sponsors">
               <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
             </a>
           </div>
           <div class="col-md-4 text-center">
-            <a href="#" class="title-sponsors">
+            <a href="www.subway.com/en-us" class="title-sponsors">
               <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
             </a>
           </div>
@@ -127,63 +127,65 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-6 col-md text-center my-auto">
+            <a href="www.weau.com" class="sponsors">
               <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-6 col-md text-center my-auto">
+            <a href="www.geteskimo.com" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-6 col-md text-center my-auto">
+            <a href="www.megacoop.com" class="sponsors">
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-6 col-md text-center my-auto">
+            <a href="www.prestigervauto.com" class="sponsors">
               <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+        </div>
+        <div class="row">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.uwec.edu/campus-life/housing-dining/dining/food-services/" class="sponsors">
               <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.theedgepubandeatery.com" class="sponsors">
               <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.theviewonlakewissota.com" class="sponsors">
               <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="ttmtech.com" class="sponsors">
               <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="xtrememotorsportsllc.com" class="sponsors">
               <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.leinie.com" class="sponsors">
               <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.aceautomall.com" class="sponsors">
               <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
             </a>
           </div>
-          <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-            <a href="#" class="sponsors">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="www.lakewissotasandbar.com" class="sponsors">
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
